# aem-env-manager

./: .gitignore  .prettierignore  CLAUDE.md  README.md  README_zh-CN.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js
.github/workflows/: ci.yml  release.yml
.serena/: project.yml
.serena/memories/: aem_env_manager_analysis.md
docs/: AEM-Environment-Manager-Design.docx  AEM-Environment-Manager-Design.md  AEM-Environment-Manager-PRD.docx  AEM-Environment-Manager-PRD.md  IMPLEMENTATION_PLAN.md  QUICK_START_BRIEF.md  RELEASE_GUIDE.md  UI_FLOW_ANALYSIS_zh-CN.md  USER_MANUAL_zh-CN.md
docs/PRD/: AEM-Environment-Manager-PRD.docx  AEM-Environment-Manager-PRD.md
docs/design/: AEM-Environment-Manager-Design.docx  AEM-Environment-Manager-Design.md
openspec/: project.md
openspec/proposals/: ui-enhancements-v2.md
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: environment.rs  instance.rs  license.rs  mod.rs  profile.rs  settings.rs  version.rs  window.rs
src-tauri/src/platform/: common.rs  linux.rs  macos.rs  mod.rs  windows.rs
src/api/: environment.ts  index.ts  instance.ts  license.ts  mappers.ts  profile.ts  settings.ts  update.ts  version.ts
src/constants/: index.ts
src/hooks/: index.ts  useAppVersion.ts  useInstances.ts  useProfiles.ts  useUpdate.ts  useWindowClose.ts
src/i18n/: index.ts
src/pages/: InstancesPage.tsx  JavaPage.tsx  LicensesPage.tsx  index.ts  (+6 more)
(+104 files in other folders)
